12632
```
$ ./build/pack/bin/scala
Welcome to Scala 2.11.9-20161219-090438-23548c4 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_111).
Type in expressions for evaluation. Or try :help.

scala> val pp=Array.ofDim[Double](10)
pp: Array[Double] = Array(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)

scala> pp(bar(0)) += 4
<console>:13: error: not found: value bar
       pp(bar(0)) += 4
          ^
```
